// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`export self subpath > common 1`] = `
[
  "base.cjs",
  "base.d.cts",
  "base.d.ts",
  "base.js",
  "base.min.cjs",
  "base.min.js",
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`export self subpath > common 2`] = `
"base.cjs:
'use strict';

function base() {
  return "base";
}

exports.base = base;
"
`;

exports[`export self subpath > common 3`] = `
"base.d.cts:
declare function base(): string;

export { base };
"
`;

exports[`export self subpath > common 4`] = `
"base.d.ts:
declare function base(): string;

export { base };
"
`;

exports[`export self subpath > common 5`] = `
"base.js:
function base() {
  return "base";
}

export { base };
"
`;

exports[`export self subpath > common 6`] = `
"base.min.cjs:
"use strict";exports.base=function(){return"base"};
"
`;

exports[`export self subpath > common 7`] = `
"base.min.js:
function e(){return"base"}export{e as base};
"
`;

exports[`export self subpath > common 8`] = `
"index.cjs:
'use strict';

var base = require('export-self-subpath/base');

var type = "module";
var name = "export-self-subpath";
var version = "0.1.0";
var exports$1 = {
	"./package.json": "./package.json",
	".": "./src/index.ts",
	"./base": "./src/base.ts"
};
var devDependencies = {
	"export-self-subpath": "file:."
};
var pkg = {
	type: type,
	name: name,
	version: version,
	exports: exports$1,
	devDependencies: devDependencies
};

function foo() {
  return pkg.name;
}

exports.foo = foo;
Object.keys(base).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
    enumerable: true,
    get: function () { return base[k]; }
  });
});
"
`;

exports[`export self subpath > common 9`] = `
"index.d.cts:
export * from 'export-self-subpath/base';

declare function foo(): string;

export { foo };
"
`;

exports[`export self subpath > common 10`] = `
"index.d.ts:
export * from 'export-self-subpath/base';

declare function foo(): string;

export { foo };
"
`;

exports[`export self subpath > common 11`] = `
"index.js:
export * from 'export-self-subpath/base';

var type = "module";
var name = "export-self-subpath";
var version = "0.1.0";
var exports = {
	"./package.json": "./package.json",
	".": "./src/index.ts",
	"./base": "./src/base.ts"
};
var devDependencies = {
	"export-self-subpath": "file:."
};
var pkg = {
	type: type,
	name: name,
	version: version,
	exports: exports,
	devDependencies: devDependencies
};

function foo() {
  return pkg.name;
}

export { foo };
"
`;

exports[`export self subpath > common 12`] = `
"index.min.cjs:
"use strict";var e=require("export-self-subpath/base"),t="export-self-subpath";exports.foo=function(){return t},Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})}));
"
`;

exports[`export self subpath > common 13`] = `
"index.min.js:
export*from"export-self-subpath/base";var e="export-self-subpath";function r(){return e}export{r as foo};
"
`;

exports[`glob exports > common 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
  "sub",
  "sub/bar.cjs",
  "sub/bar.d.cts",
  "sub/bar.d.ts",
  "sub/bar.js",
  "sub/bar.min.cjs",
  "sub/bar.min.js",
  "sub/bor.cjs",
  "sub/bor.d.cts",
  "sub/bor.d.ts",
  "sub/bor.js",
  "sub/bor.min.cjs",
  "sub/bor.min.js",
  "sub/foo.cjs",
  "sub/foo.d.cts",
  "sub/foo.d.ts",
  "sub/foo.js",
  "sub/foo.min.cjs",
  "sub/foo.min.js",
  "sub/fuo.cjs",
  "sub/fuo.d.cts",
  "sub/fuo.d.ts",
  "sub/fuo.js",
  "sub/fuo.min.cjs",
  "sub/fuo.min.js",
]
`;

exports[`glob exports > common 2`] = `
"index.cjs:
'use strict';

var bar = require('glob-exports/sub/bar');
var foo = require('glob-exports/sub/foo');



Object.keys(bar).forEach(function (k) {
	if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
		enumerable: true,
		get: function () { return bar[k]; }
	});
});
Object.keys(foo).forEach(function (k) {
	if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
		enumerable: true,
		get: function () { return foo[k]; }
	});
});
"
`;

exports[`glob exports > common 3`] = `
"index.d.cts:
export * from 'glob-exports/sub/bar';
export * from 'glob-exports/sub/foo';
"
`;

exports[`glob exports > common 4`] = `
"index.d.ts:
export * from 'glob-exports/sub/bar';
export * from 'glob-exports/sub/foo';
"
`;

exports[`glob exports > common 5`] = `
"index.js:
export * from 'glob-exports/sub/bar';
export * from 'glob-exports/sub/foo';
"
`;

exports[`glob exports > common 6`] = `
"index.min.cjs:
"use strict";var e=require("glob-exports/sub/bar"),t=require("glob-exports/sub/foo");Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})})),Object.keys(t).forEach((function(e){"default"===e||Object.prototype.hasOwnProperty.call(exports,e)||Object.defineProperty(exports,e,{enumerable:!0,get:function(){return t[e]}})}));
"
`;

exports[`glob exports > common 7`] = `
"index.min.js:
export*from"glob-exports/sub/bar";export*from"glob-exports/sub/foo";
"
`;

exports[`glob exports > common 8`] = `
"sub/bar.cjs:
'use strict';

const bar = "bar";

exports.bar = bar;
"
`;

exports[`glob exports > common 9`] = `
"sub/bar.d.cts:
declare const bar = "bar";

export { bar };
"
`;

exports[`glob exports > common 10`] = `
"sub/bar.d.ts:
declare const bar = "bar";

export { bar };
"
`;

exports[`glob exports > common 11`] = `
"sub/bar.js:
const bar = "bar";

export { bar };
"
`;

exports[`glob exports > common 12`] = `
"sub/bar.min.cjs:
"use strict";exports.bar="bar";
"
`;

exports[`glob exports > common 13`] = `
"sub/bar.min.js:
const o="bar";export{o as bar};
"
`;

exports[`glob exports > common 14`] = `
"sub/bor.cjs:
'use strict';

const bor = "bor";

exports.bor = bor;
"
`;

exports[`glob exports > common 15`] = `
"sub/bor.d.cts:
declare const bor = "bor";

export { bor };
"
`;

exports[`glob exports > common 16`] = `
"sub/bor.d.ts:
declare const bor = "bor";

export { bor };
"
`;

exports[`glob exports > common 17`] = `
"sub/bor.js:
const bor = "bor";

export { bor };
"
`;

exports[`glob exports > common 18`] = `
"sub/bor.min.cjs:
"use strict";exports.bor="bor";
"
`;

exports[`glob exports > common 19`] = `
"sub/bor.min.js:
const o="bor";export{o as bor};
"
`;

exports[`glob exports > common 20`] = `
"sub/foo.cjs:
'use strict';

const foo = "foo";

exports.foo = foo;
"
`;

exports[`glob exports > common 21`] = `
"sub/foo.d.cts:
declare const foo = "foo";

export { foo };
"
`;

exports[`glob exports > common 22`] = `
"sub/foo.d.ts:
declare const foo = "foo";

export { foo };
"
`;

exports[`glob exports > common 23`] = `
"sub/foo.js:
const foo = "foo";

export { foo };
"
`;

exports[`glob exports > common 24`] = `
"sub/foo.min.cjs:
"use strict";exports.foo="foo";
"
`;

exports[`glob exports > common 25`] = `
"sub/foo.min.js:
const o="foo";export{o as foo};
"
`;

exports[`glob exports > common 26`] = `
"sub/fuo.cjs:
'use strict';

const fuo = "fuo";

exports.fuo = fuo;
"
`;

exports[`glob exports > common 27`] = `
"sub/fuo.d.cts:
declare const fuo = "fuo";

export { fuo };
"
`;

exports[`glob exports > common 28`] = `
"sub/fuo.d.ts:
declare const fuo = "fuo";

export { fuo };
"
`;

exports[`glob exports > common 29`] = `
"sub/fuo.js:
const fuo = "fuo";

export { fuo };
"
`;

exports[`glob exports > common 30`] = `
"sub/fuo.min.cjs:
"use strict";exports.fuo="fuo";
"
`;

exports[`glob exports > common 31`] = `
"sub/fuo.min.js:
const o="fuo";export{o as fuo};
"
`;

exports[`monorepo > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`monorepo > build bar 2`] = `
"index.d.mts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`monorepo > build bar 3`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`monorepo > build bar 4`] = `
"index.js:
'use strict';

function bar(a, b) {
  return a - b;
}

exports.bar = bar;
"
`;

exports[`monorepo > build bar 5`] = `
"index.min.js:
"use strict";exports.bar=function(r,t){return r-t};
"
`;

exports[`monorepo > build bar 6`] = `
"index.min.mjs:
function n(n,r){return n-r}export{n as bar};
"
`;

exports[`monorepo > build bar 7`] = `
"index.mjs:
function bar(a, b) {
  return a - b;
}

export { bar };
"
`;

exports[`monorepo > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`monorepo > build foo 2`] = `
"index.d.mts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`monorepo > build foo 3`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`monorepo > build foo 4`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var testMonorepoBar = require('@jiek/test-monorepo-bar');

function index(a, b) {
  return a + b;
}

exports.default = index;
Object.keys(testMonorepoBar).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
    enumerable: true,
    get: function () { return testMonorepoBar[k]; }
  });
});
"
`;

exports[`monorepo > build foo 5`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0});var e=require("@jiek/test-monorepo-bar");exports.default=function(e,t){return e+t},Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})}));
"
`;

exports[`monorepo > build foo 6`] = `
"index.min.mjs:
export*from"@jiek/test-monorepo-bar";function e(e,o){return e+o}export{e as default};
"
`;

exports[`monorepo > build foo 7`] = `
"index.mjs:
export * from '@jiek/test-monorepo-bar';

function index(a, b) {
  return a + b;
}

export { index as default };
"
`;

exports[`multiple exports > common 1`] = `
[
  "foo.d.mts",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "foo.min.mjs",
  "foo.mjs",
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`multiple exports > common 2`] = `
"foo.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 3`] = `
"foo.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 4`] = `
"foo.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`multiple exports > common 5`] = `
"foo.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`multiple exports > common 6`] = `
"foo.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`multiple exports > common 7`] = `
"foo.mjs:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`multiple exports > common 8`] = `
"index.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 9`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`multiple exports > common 10`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`multiple exports > common 11`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`multiple exports > common 12`] = `
"index.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`multiple exports > common 13`] = `
"index.mjs:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`not dts tsconfig > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`not dts tsconfig > common 2`] = `
"index.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`not dts tsconfig > common 3`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`not dts tsconfig > common 4`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`not dts tsconfig > common 5`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`not dts tsconfig > common 6`] = `
"index.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`not dts tsconfig > common 7`] = `
"index.mjs:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`only minify > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.mjs",
]
`;

exports[`only minify > common 2`] = `
"index.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`only minify > common 3`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`only minify > common 4`] = `
"index.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`only minify > common 5`] = `
"index.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`project references > build bar 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "index.special.d.mts",
  "index.special.d.ts",
  "index.special.js",
  "index.special.min.js",
  "index.special.min.mjs",
  "index.special.mjs",
]
`;

exports[`project references > build bar 2`] = `
"index.d.mts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 3`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 4`] = `
"index.js:
'use strict';

function bar(a, b) {
  return a - b;
}

exports.bar = bar;
"
`;

exports[`project references > build bar 5`] = `
"index.min.js:
"use strict";exports.bar=function(r,t){return r-t};
"
`;

exports[`project references > build bar 6`] = `
"index.min.mjs:
function n(n,r){return n-r}export{n as bar};
"
`;

exports[`project references > build bar 7`] = `
"index.mjs:
function bar(a, b) {
  return a - b;
}

export { bar };
"
`;

exports[`project references > build bar 8`] = `
"index.special.d.mts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 9`] = `
"index.special.d.ts:
declare function bar(a: number, b: number): number;

export { bar };
"
`;

exports[`project references > build bar 10`] = `
"index.special.js:
'use strict';

function bar(a, b) {
  return a * b;
}

exports.bar = bar;
"
`;

exports[`project references > build bar 11`] = `
"index.special.min.js:
"use strict";exports.bar=function(r,t){return r*t};
"
`;

exports[`project references > build bar 12`] = `
"index.special.min.mjs:
function n(n,r){return n*r}export{n as bar};
"
`;

exports[`project references > build bar 13`] = `
"index.special.mjs:
function bar(a, b) {
  return a * b;
}

export { bar };
"
`;

exports[`project references > build foo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`project references > build foo 2`] = `
"index.d.mts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`project references > build foo 3`] = `
"index.d.ts:
export * from '@jiek/test-monorepo-bar';

declare function export_default(a: number, b: string): string;

export { export_default as default };
"
`;

exports[`project references > build foo 4`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var testMonorepoBar = require('@jiek/test-monorepo-bar');

function index(a, b) {
  return a + b;
}

exports.default = index;
Object.keys(testMonorepoBar).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) Object.defineProperty(exports, k, {
    enumerable: true,
    get: function () { return testMonorepoBar[k]; }
  });
});
"
`;

exports[`project references > build foo 5`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0});var e=require("@jiek/test-monorepo-bar");exports.default=function(e,t){return e+t},Object.keys(e).forEach((function(t){"default"===t||Object.prototype.hasOwnProperty.call(exports,t)||Object.defineProperty(exports,t,{enumerable:!0,get:function(){return e[t]}})}));
"
`;

exports[`project references > build foo 6`] = `
"index.min.mjs:
export*from"@jiek/test-monorepo-bar";function e(e,o){return e+o}export{e as default};
"
`;

exports[`project references > build foo 7`] = `
"index.mjs:
export * from '@jiek/test-monorepo-bar';

function index(a, b) {
  return a + b;
}

export { index as default };
"
`;

exports[`project references > build fuo 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`project references > build fuo 2`] = `
"index.d.mts:
declare function bar(a: number, b: number): number;

declare function export_default(a: number, b: string): string;

export { bar, export_default as default };
"
`;

exports[`project references > build fuo 3`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

declare function export_default(a: number, b: string): string;

export { bar, export_default as default };
"
`;

exports[`project references > build fuo 4`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function bar(a, b) {
  return a * b;
}

function index(a, b) {
  return a + b;
}

exports.bar = bar;
exports.default = index;
"
`;

exports[`project references > build fuo 5`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0}),exports.bar=function(e,t){return e*t},exports.default=function(e,t){return e+t};
"
`;

exports[`project references > build fuo 6`] = `
"index.min.mjs:
function n(n,t){return n*t}function t(n,t){return n+t}export{n as bar,t as default};
"
`;

exports[`project references > build fuo 7`] = `
"index.mjs:
function bar(a, b) {
  return a * b;
}

function index(a, b) {
  return a + b;
}

export { bar, index as default };
"
`;

exports[`project references > build fuu 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`project references > build fuu 2`] = `
"index.d.mts:
declare function bar(a: number, b: number): number;

declare function export_default(a: number, b: string): string;

export { bar, export_default as default };
"
`;

exports[`project references > build fuu 3`] = `
"index.d.ts:
declare function bar(a: number, b: number): number;

declare function export_default(a: number, b: string): string;

export { bar, export_default as default };
"
`;

exports[`project references > build fuu 4`] = `
"index.js:
'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

function bar(a, b) {
  return a - b;
}

function index(a, b) {
  return a + b;
}

exports.bar = bar;
exports.default = index;
"
`;

exports[`project references > build fuu 5`] = `
"index.min.js:
"use strict";Object.defineProperty(exports,"__esModule",{value:!0}),exports.bar=function(e,t){return e-t},exports.default=function(e,t){return e+t};
"
`;

exports[`project references > build fuu 6`] = `
"index.min.mjs:
function n(n,t){return n-t}function t(n,t){return n+t}export{n as bar,t as default};
"
`;

exports[`project references > build fuu 7`] = `
"index.mjs:
function bar(a, b) {
  return a - b;
}

function index(a, b) {
  return a + b;
}

export { bar, index as default };
"
`;

exports[`resolve imports > common 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`resolve imports > common 2`] = `
"index.cjs:
'use strict';

const bar = "bar";

const foo = "foo";

exports.bar = bar;
exports.foo = foo;
"
`;

exports[`resolve imports > common 3`] = `
"index.d.cts:
type Bar = 'bar';
declare const bar = "bar";

type Foo = 'foo';
declare const foo = "foo";

export { type Bar, type Foo, bar, foo };
"
`;

exports[`resolve imports > common 4`] = `
"index.d.ts:
type Bar = 'bar';
declare const bar = "bar";

type Foo = 'foo';
declare const foo = "foo";

export { type Bar, type Foo, bar, foo };
"
`;

exports[`resolve imports > common 5`] = `
"index.js:
const bar = "bar";

const foo = "foo";

export { bar, foo };
"
`;

exports[`resolve imports > common 6`] = `
"index.min.cjs:
"use strict";exports.bar="bar",exports.foo="foo";
"
`;

exports[`resolve imports > common 7`] = `
"index.min.js:
const o="bar",r="foo";export{o as bar,r as foo};
"
`;

exports[`simple > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`simple > common 2`] = `
"index.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple > common 3`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple > common 4`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`simple > common 5`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`simple > common 6`] = `
"index.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`simple > common 7`] = `
"index.mjs:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`simple mjs > common 1`] = `
[
  "index.cjs",
  "index.d.cts",
  "index.d.ts",
  "index.js",
  "index.min.cjs",
  "index.min.js",
]
`;

exports[`simple mjs > common 2`] = `
"index.cjs:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`simple mjs > common 3`] = `
"index.d.cts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple mjs > common 4`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`simple mjs > common 5`] = `
"index.js:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`simple mjs > common 6`] = `
"index.min.cjs:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`simple mjs > common 7`] = `
"index.min.js:
function o(){return"foo"}export{o as foo};
"
`;

exports[`unordered exports inputs > common 1`] = `
[
  "a.d.mts",
  "a.d.ts",
  "a.js",
  "a.min.js",
  "a.min.mjs",
  "a.mjs",
  "b.d.mts",
  "b.d.ts",
  "b.js",
  "b.min.js",
  "b.min.mjs",
  "b.mjs",
]
`;

exports[`unordered exports inputs > common 2`] = `
"a.d.mts:
type A = 'a';

export type { A };
"
`;

exports[`unordered exports inputs > common 3`] = `
"a.d.ts:
type A = 'a';

export type { A };
"
`;

exports[`unordered exports inputs > common 4`] = `
"a.js:
'use strict';

"
`;

exports[`unordered exports inputs > common 5`] = `
"a.min.js:
"use strict";
"
`;

exports[`unordered exports inputs > common 6`] = `
"a.min.mjs:

"
`;

exports[`unordered exports inputs > common 7`] = `
"a.mjs:

"
`;

exports[`unordered exports inputs > common 8`] = `
"b.d.mts:
type BDepDep = 1;

type BDep = BDepDep;

type B = BDep;

export type { B };
"
`;

exports[`unordered exports inputs > common 9`] = `
"b.d.ts:
type BDepDep = 1;

type BDep = BDepDep;

type B = BDep;

export type { B };
"
`;

exports[`unordered exports inputs > common 10`] = `
"b.js:
'use strict';

"
`;

exports[`unordered exports inputs > common 11`] = `
"b.min.js:
"use strict";
"
`;

exports[`unordered exports inputs > common 12`] = `
"b.min.mjs:

"
`;

exports[`unordered exports inputs > common 13`] = `
"b.mjs:

"
`;

exports[`with no resolve exports > common 1`] = `
[
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
]
`;

exports[`with no resolve exports > common 2`] = `
"index.d.mts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 3`] = `
"index.d.ts:
declare function foo(): string;

export { foo };
"
`;

exports[`with no resolve exports > common 4`] = `
"index.js:
'use strict';

function foo() {
  return "foo";
}

exports.foo = foo;
"
`;

exports[`with no resolve exports > common 5`] = `
"index.min.js:
"use strict";exports.foo=function(){return"foo"};
"
`;

exports[`with no resolve exports > common 6`] = `
"index.min.mjs:
function o(){return"foo"}export{o as foo};
"
`;

exports[`with no resolve exports > common 7`] = `
"index.mjs:
function foo() {
  return "foo";
}

export { foo };
"
`;

exports[`with scss file import > common 1`] = `
[
  "foo.css",
  "foo.d.mts",
  "foo.d.ts",
  "foo.js",
  "foo.min.js",
  "foo.min.mjs",
  "foo.mjs",
  "index.css",
  "index.d.mts",
  "index.d.ts",
  "index.js",
  "index.min.js",
  "index.min.mjs",
  "index.mjs",
  "index.styless.d.mts",
  "index.styless.d.ts",
  "index.styless.js",
  "index.styless.min.js",
  "index.styless.min.mjs",
  "index.styless.mjs",
]
`;

exports[`with scss file import > common 2`] = `
"foo.css:
.foo{display:none}.foo--bar{display:block}"
`;

exports[`with scss file import > common 3`] = `
"foo.d.mts:

export {  }
"
`;

exports[`with scss file import > common 4`] = `
"foo.d.ts:

export {  }
"
`;

exports[`with scss file import > common 5`] = `
"foo.js:
'use strict';

require('with-scss-file-import/foo.css');

"
`;

exports[`with scss file import > common 6`] = `
"foo.min.js:
"use strict";require("with-scss-file-import/foo.css");
"
`;

exports[`with scss file import > common 7`] = `
"foo.min.mjs:
import"with-scss-file-import/foo.css";
"
`;

exports[`with scss file import > common 8`] = `
"foo.mjs:
import 'with-scss-file-import/foo.css';
"
`;

exports[`with scss file import > common 9`] = `
"index.css:
#app{color:red}"
`;

exports[`with scss file import > common 10`] = `
"index.d.mts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 11`] = `
"index.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 12`] = `
"index.js:
'use strict';

require('with-scss-file-import/index.css');
require('with-scss-file-import/foo');

function bar() {
  return "bar";
}

exports.bar = bar;
"
`;

exports[`with scss file import > common 13`] = `
"index.min.js:
"use strict";require("with-scss-file-import/index.css"),require("with-scss-file-import/foo"),exports.bar=function(){return"bar"};
"
`;

exports[`with scss file import > common 14`] = `
"index.min.mjs:
import"with-scss-file-import/index.css";import"with-scss-file-import/foo";function i(){return"bar"}export{i as bar};
"
`;

exports[`with scss file import > common 15`] = `
"index.mjs:
import 'with-scss-file-import/index.css';
import 'with-scss-file-import/foo';

function bar() {
  return "bar";
}

export { bar };
"
`;

exports[`with scss file import > common 16`] = `
"index.styless.d.mts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 17`] = `
"index.styless.d.ts:
declare function bar(): string;

export { bar };
"
`;

exports[`with scss file import > common 18`] = `
"index.styless.js:
'use strict';

require('with-scss-file-import/foo');

function bar() {
  return "bar";
}

exports.bar = bar;
"
`;

exports[`with scss file import > common 19`] = `
"index.styless.min.js:
"use strict";require("with-scss-file-import/foo"),exports.bar=function(){return"bar"};
"
`;

exports[`with scss file import > common 20`] = `
"index.styless.min.mjs:
import"with-scss-file-import/foo";function o(){return"bar"}export{o as bar};
"
`;

exports[`with scss file import > common 21`] = `
"index.styless.mjs:
import 'with-scss-file-import/foo';

function bar() {
  return "bar";
}

export { bar };
"
`;
